# global_gauges

./: .gitignore  README.md  __init__.py  global_gauges.py  pyproject.toml  run.py
global_gauges/: __init__.py  facade.py  global_gauges.py
global_gauges/database/: __init__.py  manager.py  models.py
global_gauges/providers/: __init__.py  _base.py  _template.py  abom.py  brana.py  eauf.py  eccc.py  hubeau.py  krwamis.py  ukea.py  usgs.py
global_gauges/providers/broken/: japan.py  sa.py
global_gauges/providers/static_metadata/: korea_gauges.csv
notebooks/: jwis.ipynb  test.ipynb
providers/: __init__.py  _base.py  _dmodel.py  abom.py  australia.py  base_provider.py  canada.py  eccc.py  hydat.py  uk.py  ukea.py  usa.py  usgs.py
