[project]
name = "global-gauges"
version = "0.1.0"
description = "A package for downloading and querying river discharge data."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dataretrieval>=1.0.12",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 100
