[project]
name = "global-gauges"
version = "0.1.0"
description = "A package for downloading and querying river discharge data."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "dataretrieval>=1.0.12",
    "duckdb>=1.3.0",
    "fire>=0.7.0",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "platformdirs>=4.3.8",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.6",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["global_gauges*"]
exclude = ["notebooks"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
exclude = ["notebooks"]
